@@ -57,6 +57,7 @@ import org.eclipse.collections.impl.math.IntegerSum;
 import org.eclipse.collections.impl.math.Sum;
 import org.eclipse.collections.impl.multimap.list.FastListMultimap;
 import org.eclipse.collections.impl.test.Verify;
+import org.eclipse.collections.impl.test.domain.Holder;
 import org.eclipse.collections.impl.tuple.Tuples;
 import org.junit.jupiter.api.Test;
 
@@ -296,7 +297,7 @@ public class ArrayListIterateTest
         list.add(2.0);
         list.add(3.0);
         assertEquals(
-                new Double(7.0),
+                Double.valueOf(7.0),
                 ArrayListIterate.injectInto(1.0, list, AddFunction.DOUBLE));
     }
 
@@ -308,7 +309,7 @@ public class ArrayListIterateTest
         list.add(2.0f);
         list.add(3.0f);
         assertEquals(
-                new Float(7.0f),
+                Float.valueOf(7.0f),
                 ArrayListIterate.injectInto(1.0f, list, AddFunction.FLOAT));
     }
 
@@ -838,10 +839,9 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.getIntegerList();
         assertEquals(Integer.valueOf(1), ArrayListIterate.detect(list, Integer.valueOf(1)::equals));
-        //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
-        ArrayList<Integer> list2 =
-                this.newArrayList(1, new Integer(2), 2);  // test relies on having a unique instance of "2"
-        assertSame(list2.get(1), ArrayListIterate.detect(list2, Integer.valueOf(2)::equals));
+        ArrayList<Holder<Integer>> list2 =
+                new ArrayList<>(Lists.mutable.with(new Holder<>(1), new Holder<>(2), new Holder<>(2)));
+        assertSame(list2.get(1), ArrayListIterate.detect(list2, new Holder<>(2)::equals));
     }
 
     @Test
@@ -856,10 +856,9 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.getIntegerList();
         assertEquals(Integer.valueOf(1), ArrayListIterate.detectWith(list, Object::equals, 1));
-        //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
-        ArrayList<Integer> list2 =
-                this.newArrayList(1, new Integer(2), 2);  // test relies on having a unique instance of "2"
-        assertSame(list2.get(1), ArrayListIterate.detectWith(list2, Object::equals, 2));
+        ArrayList<Holder<Integer>> list2 =
+                new ArrayList<>(Lists.mutable.with(new Holder<>(1), new Holder<>(2), new Holder<>(2)));
+        assertSame(list2.get(1), ArrayListIterate.detectWith(list2, Object::equals, new Holder<>(2)));
     }
 
     @Test
@@ -1282,37 +1281,38 @@ public class ArrayListIterateTest
     @Test
     public void removeIf()
     {
+        java.util.function.Predicate<Integer> isNull = each -> each == null;
         ArrayList<Integer> objects = this.newArrayList(1, 2, 3, null);
-        ArrayListIterate.removeIf(objects, Predicates.isNull());
+        ArrayListIterate.removeIf(objects, isNull);
         Verify.assertSize(3, objects);
         Verify.assertContainsAll(objects, 1, 2, 3);
 
         ArrayList<Integer> objects5 = this.newArrayList(null, 1, 2, 3);
-        ArrayListIterate.removeIf(objects5, Predicates.isNull());
+        ArrayListIterate.removeIf(objects5, isNull);
         Verify.assertSize(3, objects5);
         Verify.assertContainsAll(objects5, 1, 2, 3);
 
         ArrayList<Integer> objects4 = this.newArrayList(1, null, 2, 3);
-        ArrayListIterate.removeIf(objects4, Predicates.isNull());
+        ArrayListIterate.removeIf(objects4, isNull);
         Verify.assertSize(3, objects4);
         Verify.assertContainsAll(objects4, 1, 2, 3);
 
         ArrayList<Integer> objects3 = this.newArrayList(null, null, null, null);
-        ArrayListIterate.removeIf(objects3, Predicates.isNull());
+        ArrayListIterate.removeIf(objects3, isNull);
         Verify.assertEmpty(objects3);
 
         ArrayList<Integer> objects2 = this.newArrayList(null, 1, 2, 3, null);
-        ArrayListIterate.removeIf(objects2, Predicates.isNull());
+        ArrayListIterate.removeIf(objects2, isNull);
         Verify.assertSize(3, objects2);
         Verify.assertContainsAll(objects2, 1, 2, 3);
 
         ArrayList<Integer> objects1 = this.newArrayList(1, 2, 3);
-        ArrayListIterate.removeIf(objects1, Predicates.isNull());
+        ArrayListIterate.removeIf(objects1, isNull);
         Verify.assertSize(3, objects1);
         Verify.assertContainsAll(objects1, 1, 2, 3);
 
         ThisIsNotAnArrayList<Integer> objects6 = this.newNotAnArrayList(1, 2, 3);
-        ArrayListIterate.removeIf(objects6, Predicates.isNull());
+        ArrayListIterate.removeIf(objects6, isNull);
         Verify.assertSize(3, objects6);
         Verify.assertContainsAll(objects6, 1, 2, 3);
     }
