@@ -67,7 +67,6 @@ import org.eclipse.collections.api.tuple.Twin;
 import org.eclipse.collections.impl.bag.mutable.HashBag;
 import org.eclipse.collections.impl.block.factory.Comparators;
 import org.eclipse.collections.impl.block.factory.Functions;
-import org.eclipse.collections.impl.block.factory.IntegerPredicates;
 import org.eclipse.collections.impl.block.factory.ObjectIntProcedures;
 import org.eclipse.collections.impl.block.factory.Predicates;
 import org.eclipse.collections.impl.block.factory.Predicates2;
@@ -351,7 +350,7 @@ public class IterateTest
     @Test
     public void injectInto2()
     {
-        assertEquals(new Double(7), Iterate.injectInto(1.0, iList(1.0, 2.0, 3.0), AddFunction.DOUBLE));
+        assertEquals(Double.valueOf(7.0), Iterate.injectInto(1.0, iList(1.0, 2.0, 3.0), AddFunction.DOUBLE));
     }
 
     @Test
@@ -958,6 +957,7 @@ public class IterateTest
                 Tuples.twin("3", "3"));
         Collection<Twin<String>> results = Iterate.select(twins, new PairPredicate<String, String>()
         {
+            @Override
             public boolean accept(String argument1, String argument2)
             {
                 return "1".equals(argument1) || "1".equals(argument2);
@@ -1612,9 +1612,10 @@ public class IterateTest
 
     private void assertRemoveIfFromList(List<Integer> newIntegers)
     {
-        assertTrue(Iterate.removeIf(newIntegers, IntegerPredicates.isEven()));
-        assertFalse(Iterate.removeIf(FastList.newListWith(1, 3, 5), IntegerPredicates.isEven()));
-        assertFalse(Iterate.removeIf(FastList.newList(), IntegerPredicates.isEven()));
+        java.util.function.Predicate<Integer> isEven = each -> each % 2 == 0;
+        assertTrue(Iterate.removeIf(newIntegers, isEven));
+        assertFalse(Iterate.removeIf(FastList.newListWith(1, 3, 5), isEven));
+        assertFalse(Iterate.removeIf(FastList.newList(), isEven));
         Verify.assertContainsAll(newIntegers, 1, 3, 5);
         Verify.assertSize(3, newIntegers);
     }
@@ -1646,7 +1647,8 @@ public class IterateTest
     public void removeIfFromSet()
     {
         MutableSet<Integer> integers = Interval.toSet(1, 5);
-        assertTrue(Iterate.removeIf(integers, IntegerPredicates.isEven()));
+        java.util.function.Predicate<Integer> isEven = each -> each % 2 == 0;
+        assertTrue(Iterate.removeIf(integers, isEven));
         Verify.assertContainsAll(integers, 1, 3, 5);
         Verify.assertSize(3, integers);
     }
